--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "node": ">=22.12.0"
   },
   "dependencies": {
-    "sharp": "^0.34.5"
+    "sharp": "^0.34.5",
+    "http-proxy-middleware": "^3.0.2",
+    "express": "^4.21.2"
   }
 }
