Serve frontend build from API server in production
Updated the API server to serve static files from the frontend's build directory and handle client-side routing. Added a 'prod' script to package.json to build the frontend and start the server. Also made the API server port configurable via the PORT environment variable.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "discordadmins:dev": "echo '🔧 Discord Admins is integrated into ticketbot and loaded automatically'",
     "frontend:dev": "npm run dev -w frontend",
     "frontend:build": "npm run build -w frontend",
+    "prod": "npm run frontend:build && npm run hooks:start",
     "ticketbot:build": "echo '✅ Ticketbot: No build needed (Node.js modules)'",
     "hooks:build": "echo '✅ Discordhooks: No build needed (Node.js modules)'",
     "discordadmins:build": "echo '✅ Discord Admins: No build needed (Node.js modules)'",
